Adding new books through form

--- a/templates/views/index.ejs
+++ b/templates/views/index.ejs
@@ -23,18 +23,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>Harry Potter</td>
-                  <td>J.K. Rowling</td>
-                  <td>
-                    <a href="/updatebook" class="btn border-shadow update">
-                      <span class="text-gradient">Edytuj</span>
-                    </a>
-                    <a class="btn border-shadow delete">
-                      <span class="text-gradient">Usuń</span>
-                    </a>
-                  </td>
-                </tr>
+                <%- include('../partials/show') %>
               </tbody>
             </table>
           </form>
