--- a/templates/partials/form.ejs
+++ b/templates/partials/form.ejs
@@ -1,13 +1,13 @@
-<form action="/" method="POST" id="add_book">
+<form action="/api/books" method="POST" id="add_book">
   <div class="new_book">
     <div class="form-group">
-      <label for="name" class="text-light">Tytuł</label>
+      <label for="title" class="text-light">Tytuł</label>
       <input type="hidden" name="id" value="" />
-      <input type="text" name="Tytuł" value="" placeholder="Podaj tytuł" />
+      <input type="text" name="title" value="" placeholder="Podaj tytuł" />
     </div>
     <div class="form-group">
       <label for="author" class="text-light">Autor</label>
-      <input type="text" name="Tytuł" value="" placeholder="Podaj autora" />
+      <input type="text" name="author" value="" placeholder="Podaj autora" />
     </div>
     <div class="form-group">
       <button type="submit" class="btn text-dark update">Zapisz</button>
