Changes to the controller and form

--- a/templates/partials/form.ejs
+++ b/templates/partials/form.ejs
@@ -1,4 +1,4 @@
-<form action="/api/books" method="POST" id="add_book">
+<form action="/api/books" method="post" id="add_book">
   <div class="new_book">
     <div class="form-group">
       <label for="title" class="text-light">Tytuł</label>
