--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,1 +1,10 @@
-<footer><p>Copyright (c) Marcel Jurkiewicz 2022</p></footer>
+<footer>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script src="../../assets/js/index.js"></script>
+  <p>Copyright (c) Marcel Jurkiewicz 2022</p>
+</footer>
