--- a/templates/views/updateBook.ejs
+++ b/templates/views/updateBook.ejs
@@ -15,16 +15,16 @@
           <h2>Edytuj książkę</h2>
           <span class="text-light">Użyj formularza do edycji ksiażki</span>
         </div>
-        <form action="/" method="POST" id="add_book">
+        <form method="POST" id="update_book">
           <div class="new_book">
             <div class="form-group">
               <label for="name" class="text-light">Tytuł</label>
-              <input type="hidden" name="id" value="" />
-              <input type="text" name="Tytuł" value="" placeholder="Podaj tytuł" />
+              <input type="hidden" name="id" value="<%= book._id %>" />
+              <input type="text" name="Tytuł" value="<%= book.title %>" placeholder="Podaj tytuł" />
             </div>
             <div class="form-group">
               <label for="author" class="text-light">Autor</label>
-              <input type="text" name="Tytuł" value="" placeholder="Podaj autora" />
+              <input type="text" name="Tytuł" value="<%= book.author %>" placeholder="Podaj autora" />
             </div>
             <div class="form-group">
               <button type="submit" class="btn text-dark update">Zapisz</button>
