Fixed updating and deleting books, added jquery, minor fixes

--- a/templates/views/addBook.ejs
+++ b/templates/views/addBook.ejs
@@ -19,6 +19,6 @@
         <%- include('../partials/form') %> <%- include('../partials/footer') %>
       </div>
     </main>
-    <script src="/js/app.js"></script>
+    <script src="../../assets/js/index.js"></script>
   </body>
 </html>
