--- a/templates/partials/show.ejs
+++ b/templates/partials/show.ejs
@@ -6,7 +6,7 @@
     <a href="/updatebook?id=<%= books[i]._id %>" class="btn border-shadow update">
       <span class="text-gradient">Edytuj</span>
     </a>
-    <a class="btn border-shadow delete">
+    <a class="btn border-shadow delete pointer" data-id="<%= books[i]._id %>">
       <span class="text-gradient">Usuń</span>
     </a>
   </td>
