--- a/templates/views/index.ejs
+++ b/templates/views/index.ejs
@@ -31,6 +31,6 @@
         <%- include('../partials/footer') %>
       </div>
     </main>
-    <script src="/js/app.js"></script>
+    <script src="../../assets/js/index.js"></script>
   </body>
 </html>
