--- a/templates/views/updateBook.ejs
+++ b/templates/views/updateBook.ejs
@@ -20,11 +20,11 @@
             <div class="form-group">
               <label for="name" class="text-light">Tytuł</label>
               <input type="hidden" name="id" value="<%= book._id %>" />
-              <input type="text" name="Tytuł" value="<%= book.title %>" placeholder="Podaj tytuł" />
+              <input type="text" name="title" value="<%= book.title %>" placeholder="Podaj tytuł" />
             </div>
             <div class="form-group">
               <label for="author" class="text-light">Autor</label>
-              <input type="text" name="Tytuł" value="<%= book.author %>" placeholder="Podaj autora" />
+              <input type="text" name="author" value="<%= book.author %>" placeholder="Podaj autora" />
             </div>
             <div class="form-group">
               <button type="submit" class="btn text-dark update">Zapisz</button>
@@ -35,6 +35,6 @@
         <%- include('../partials/footer') %>
       </div>
     </main>
-    <script src="/js/app.js"></script>
+    <script src="../../assets/js/index.js"></script>
   </body>
 </html>
