Modified database connection. Changes to show.ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,6 +19,7 @@
           <table class="table">
             <thead class="thead-dark">
               <tr>
+                <th>Pozycja</th>
                 <th>Tytuł</th>
                 <th>Autor</th>
                 <th>Akcja</th>
