--- a/src/views/partials/show.ejs
+++ b/src/views/partials/show.ejs
@@ -1,5 +1,7 @@
 <% for(var i=0;i < books.length; i++) {%>
+<% console.log(books) %>
 <tr>
+  <td><%= i+1 %>.</td>
   <td><%= books[i].title %></td>
   <td><%= books[i].author %></td>
   <td>
