Moved books and authors into seperate models and modified forms and routes around it.

--- a/src/views/addAuthor.ejs
+++ b/src/views/addAuthor.ejs
@@ -14,13 +14,13 @@
         <div class="filter"><a href="/" class="border-shadow">Wszystkie książki</a></div>
       </div>
       <div class="form-title text-center">
-        <h2>Edytuj książkę</h2>
-        <span class="text-light">Użyj formularza do edycji ksiażki</span>
+        <h2>Nowy autor</h2>
+        <span class="text-light">Użyj formularza do wprowadzenia nowego autora</span>
       </div>
-      <%- include('./partials/update_book_form') %>
+
+      <%- include('./partials/add_author_form') %>
       <%- include('./partials/footer') %>
     </div>
-
   </main>
 
 </body>
