--- a/src/views/addBook.ejs
+++ b/src/views/addBook.ejs
@@ -18,7 +18,7 @@
         <span class="text-light">Użyj formularza do wprowadzenia nowej książki</span>
       </div>
 
-      <%- include('./partials/add_form') %>
+      <%- include('./partials/add_book_form') %>
       <%- include('./partials/footer') %>
     </div>
   </main>
