--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,10 @@
     <div class="container">
       <div class="box-nav d-flex-justify-between">
         <a href="/addbook" class="border-shadow">
-          <span class="text-gradient">Nowa książka</span>
+          <span class="text-gradient">Dodaj książkę</span>
+        </a>
+        <a style="margin-left:20px" href="/addauthor" class="border-shadow">
+          <span class="text-gradient">Dodaj autora</span>
         </a>
 
         <form action="/" method="POST">
