--- a/src/views/partials/add_book_form.ejs
+++ b/src/views/partials/add_book_form.ejs
@@ -7,7 +7,11 @@
     </div>
     <div class="form-group">
       <label for="author" class="text-light">Autor</label>
-      <input type="text" name="author" value="" placeholder="Podaj autora" />
+      <select class="author-select" id="author" name="author">
+        <% for(var i=0;i < authors.length; i++) {%>
+        <option value="<%= authors[i]._id %>"><%= authors[i].name %> <%= authors[i].surname %></option>
+        <%}%>
+      </select>
     </div>
     <div class="form-group">
       <button type="submit" class="btn text-dark update">Zapisz</button>
