--- a/src/views/partials/show.ejs
+++ b/src/views/partials/show.ejs
@@ -3,7 +3,7 @@
 <tr>
   <td><%= i+1 %>.</td>
   <td><%= books[i].title %></td>
-  <td><%= books[i].author %></td>
+  <td><%= books[i].author?.name  %> <%= books[i].author?.surname  %></td>
   <td>
     <a href="/updatebook?id=<%= books[i]._id %>" class="btn border-shadow update">
       <span class="text-gradient">Edytuj</span>
