--- a/src/views/partials/show_books.ejs
+++ b/src/views/partials/show_books.ejs
@@ -6,7 +6,10 @@
   <td><%= books[i].author?.name  %> <%= books[i].author?.surname  %></td>
   <td>
     <a href="/updatebook?id=<%= books[i]._id %>" class="btn border-shadow update">
-      <span class="text-gradient">Edytuj</span>
+      <span class="text-gradient">Edytuj książkę</span>
+    </a>
+    <a href="/updateauthor?id=<%= books[i].author._id %>" class="btn border-shadow update">
+      <span class="text-gradient">Edytuj autora</span>
     </a>
     <a class="btn border-shadow delete pointer" data-id="<%= books[i]._id %>">
       <span class="text-gradient">Usuń</span>
